<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datosPers"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/edNombres"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombres"
                android:background="@drawable/rounded_border"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginBottom="10sp"
                android:padding="5sp"/>

            <EditText
                android:id="@+id/edApellidos"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos"
                android:background="@drawable/rounded_border"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginBottom="10sp"
                android:padding="5sp"/>

            <EditText
                android:id="@+id/edCelular"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/celular"
                android:background="@drawable/rounded_border"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginBottom="10sp"
                android:padding="5sp"/>

            <Spinner
                android:id="@+id/spinnerFacultad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_style"
                android:layout_marginBottom="10sp">
            </Spinner>

            <EditText
                android:id="@+id/edCodigoAlumno"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/codigo"
                android:background="@drawable/rounded_border"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginBottom="10sp"
                android:padding="5sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datosUser"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/edNuevoUsuario"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user"
                android:background="@drawable/rounded_border"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginBottom="10sp"
                android:padding="5sp"/>

            <EditText
                android:id="@+id/edNuevoUsuarioPass"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pass"
                android:background="@drawable/rounded_border"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginBottom="10sp"
                android:padding="5sp"/>

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/crearcuenta"
                android:textColor="@color/black"
                android:background="@drawable/rounded_btn2"
                android:elevation="10dp"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>